Ya casi esta acabado

--- a/index.html
+++ b/index.html
@@ -23,14 +23,23 @@
         <h1>Mi Blog</h1>
     </header>
 
-        <nav>
+        <nav class="menu">
             <ul>
-                <div class="navegacion"><li>Principal</li></div>
+                <li>Principal</li>
                 <li>Ayuda</li>
                 <li>Pag web</li>
                 <li>Otros proyectos</li>
             </ul>
         </nav>
+
+        <aside>
+            <blockquote cite="www.youtube.mx">
+                Mensaje 1
+            </blockquote>
+            <blockquote cite="">
+                mensaje 2
+            </blockquote>
+        </aside>
 
     <section>
         <article>
